--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <!--<link rel="stylesheet" type="text/css" href="css/main.css">-->
 </head>
 <body>
-
+  <h1>basic boilerplate</h1>
 </body>
 <script src='js/dist/vendor.js'></script>
 <script src='js/dist/app.js'></script>
