--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <!--<link rel="stylesheet" type="text/css" href="css/main.css">-->
-</head>
-<body>
-</body>
-<script src='js/dist/vendor.js'></script>
-<script src='js/dist/app.js'></script>
-</html>
+<!DOCTYPE html><!DOCTYPE html><html lang="en"></html><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta http-equiv="X-UA-Compatible" content="ie=edge"><title>Document</title></head><body><h1>hello</h1><script type="text/javascript" src="js/dist/vendor.bundle.js"></script><script type="text/javascript" src="js/dist/app.bundle.js"></script></body>
